# ascii-poker

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  build.sh  format-all.sh
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/include/: application.h  client_settings.h  client_view_state.h  command.h  game_text.h  i18n.h  network_client.h  poker_ui.h  ui_cards.h  ui_theme.h
client/include/spdlog/: async.h  logger.h  pattern_formatter-inl.h  stopwatch.h
client/include/spdlog/details/: circular_q.h  file_helper.h  mpmc_blocking_q.h  periodic_worker-inl.h  synchronous_factory.h  tcp_client.h
client/include/spdlog/fmt/bundled/: args.h
client/include/spdlog/sinks/: android_sink.h  dist_sink.h  dup_filter_sink.h  stdout_color_sinks.h  stdout_sinks.h  udp_sink.h
client/src/: application.cpp  application.h  client_settings.cpp  client_view_state.cpp  command.cpp  command.h  game_text.cpp  i18n.cpp  main.cpp  network_client.cpp  network_client.h  poker_ui.cpp  poker_ui.h  ui_cards.cpp  ui_theme.cpp
client/src/ftxui/: ftxui.cpp  ftxui.hpp
client/tests/: test_utils.cpp
common/: CMakeLists.txt
common/include/poker/: auth.h  card.h  deck.h  error_codes.h  game_constants.h  hand_evaluator.h  network_limits.h  packet_framing.h  protocol.h  side_pots.h
common/src/: auth.cpp  card.cpp  card.h  deck.cpp  deck.h  evaluator.cpp  evaluator.h  hand_evaluator.cpp  hand_result.h  packet_framing.cpp  protocol.cpp  side_pots.cpp
common/tests/: test_evaluator.cpp
scripts/: check-format.sh
server/: CMakeLists.txt
server/include/game/: game_session.h  i_player.h  lobby.h  remote_player.h  room.h
server/include/messaging/: handshake_message_processor.h  i_message_processor.h  lobby_message_processor.h
server/include/network/: connection_registry.h  i_connection.h  player_name_registry.h  server.h  session.h
server/include/spdlog/: async_logger.h  common.h  formatter.h  mdc.h  spdlog.h
server/include/spdlog/cfg/: helpers.h
server/include/spdlog/details/: backtracer-inl.h  backtracer.h  log_msg_buffer.h  null_mutex.h  os-inl.h  tcp_client-windows.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h
server/include/spdlog/fmt/: bin_to_hex.h
server/include/spdlog/fmt/bundled/: color.h  ranges.h  xchar.h
server/include/spdlog/sinks/: basic_file_sink-inl.h  callback_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink.h  stdout_color_sinks-inl.h  stdout_sinks-inl.h  syslog_sink.h  systemd_namespace_sink.h  wincolor_sink-inl.h  wincolor_sink.h
server/include/storage/: database.h  password_hash.h  user_repository.h
server/src/: echo_message_processor.cpp  lobby.h  main.cpp  room.cpp  room.h  server.cpp  server.h  session.cpp  session.h
server/src/game/: game_session.cpp  game_session.h  i_player.h  lobby.cpp  lobby.h  remote_player.cpp  remote_player.h  room.cpp  room.h
server/src/messaging/: echo_message_processor.cpp  echo_message_processor.h  handshake_message_processor.cpp  i_message_processor.h  lobby_message_processor.cpp  lobby_message_processor.h
server/src/network/: connection_registry.cpp  player_name_registry.cpp  server.cpp  server.h  session.cpp  session.h
server/src/storage/: database.cpp  password_hash.cpp  user_repository.cpp
server/src/utils/: helper.cpp  helper.h
server/tests/: test_utils.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_chip_persistence.cpp  test_database.cpp  test_deck.cpp  test_game_session.cpp  test_hand_evaluator.cpp  test_integration.cpp  test_lobby.cpp  test_login_auth.cpp  test_packet_framing.cpp  test_player_name_registry.cpp  test_protocol.cpp  test_side_pots.cpp  test_user_repository.cpp
tests/support/: message_collector.h  mock_connection.h
